# board-games-rust

./: .gitignore  Cargo.toml
src/: checkers.rs  connect4.rs  repetition_guard.rs  tree.rs  ui.rs
src/mcts/: mod.rs  score.rs
src/mcts_core/: mod.rs  score.rs
