[package]
name = "board-games-rust"
version = "0.1.0"
authors = ["Mac Lee <macthecadillac@gmail.com>"]
edition = "2018"

[dependencies]
console = "0.7"
clap = "2.33"
derive_more = "0.13"
indextree = "3.2"
itertools = "0.8"
rand = "0.7"
unicode-segmentation = "1.3"

[profile.release]
opt-level = 3
codegen-units = 1

# [[bin]]
# name = "checkers"
# path = "src/checkers.rs"

[[bin]]
name = "connect4"
path = "src/connect4.rs"
